# XGaze3D

./: .gitignore  README.md  activate_metashape.py  deactivate_metashape.py  main.py  pyproject.toml  requirements.txt
assets/subject0000/frame0000/final_obj/: mvs3d.mtl
src/: face_model.txt  headpose.py  main_reconstruct.py  main_render.py  print_result.py  pytorch3d_util.py  read_agisoft.py  xgaze_util.py
src/configs/: group.yaml
src/gazelib/: headpose.py  label_transform.py
src/gazelib/draw/: draw_image.py
src/gazelib/gaze/: gaze_utils.py  normalize.py
src/gazelib/utils/: color_text.py  gaze_utils.py  h5_utils.py  obj_utils.py
src/utils/: preprocess.py
